HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::

    PloneHelpCenter 3.0dev
    
    - setuphandlers.py wasn't protecting importVarious from running in
      non-install contexts. Showed up as unable to find portal_registry
      when creating a new plone site. [stevem]
    
    - Added Upgrade profile to manage type transition. [stevem]
    
    - Updated all types to be derived from ATCT types, thus inheriting
      all the standard Plone behavior that PHC used to have to do on
      its own. [stevem]
    
    - Add a "Knowledge Base" that's basically a large folder to
      organize how-tos and tutorials. [stevem]

    PloneHelpCenter 1.6.1
    
    - Set up indices in Extensions/Install.py rather than via GS
      so that they won't be cleared on reinstall. [stevem]
    
    - Can't cache function results that have brains.
      [stevem]


    PloneHelpCenter 1.6
    
    - Added time-based ram caching to several expensive view methods.
      Default invalidation is 30 minutes, but may be changed in
      config.py.
      [stevem]
    
    - Plone 3.x is now required. PHC 1.5.x will be a maintenance branch. 
    
    - Add browser view support for a listing of start here docs by section.
      This is for Plone.Org, forthcoming documentation top page revision.
      [stevem]
    
    - The compact topic view no longer blocks the left column. That just isn't
      necessary for Plone 3.x.
      [stevem]


    PloneHelpCenter 1.5

    - Corrected a problem in the helpcenter_view that would cause a batching 
      error for non-PHC subcontent. [stevem]
    
    RC 2
    
    - Fix issue #95 -- Order of items is not respected -- by adding back
      some of the interfaces masked when marker interfaces were added
      during view implementation.
      [stevem]
    
    - Hacked up a solution to how-to attachment action buttons that works
      with 2.5 and 3.x. The is just a patch to hold until 2.5 compatibility